# thunderfury

./: .editorconfig  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  deny.toml
.github/workflows/: docker.yaml  rust.yaml
src/: cli.rs  job.rs  logger.rs  main.rs
src/api/: error.rs  genre.rs  image.rs  library.rs  mod.rs  response.rs  subscription.rs  swagger.rs
src/api/genre/: mod.rs
src/api/model/: genre.rs  library.rs  mod.rs  subscription.rs
src/api/movie/: mod.rs  query.rs
src/api/provider/: alist.rs  mod.rs  tmdb.rs
src/api/subscription/: create.rs  mod.rs  query.rs  run.rs
src/api/tv/: mod.rs  query.rs
src/common/: config.rs  enums.rs  error.rs  mod.rs  state.rs
src/entity/: column_type.rs  episode.rs  genre.rs  mod.rs  movie.rs  season.rs  subscription.rs  task.rs  tv.rs
src/entity/migration/: m20230602_104209_create_subscription_table.rs  mod.rs
src/entity/movie/: mod.rs  query.rs
src/entity/subscription/: create.rs  mod.rs  query.rs  update.rs
src/entity/task/: create.rs  delete.rs  mod.rs  param.rs  query.rs  update.rs
src/entity/tv/: create.rs  mod.rs  query.rs
src/migration/: m20230428_165822_create_tv_table.rs  m20230510_050508_create_season_table.rs  m20230510_051935_create_episode_table.rs  m20230602_104150_create_movie_table.rs  m20230602_104200_create_genre_table.rs  m20230602_104209_create_subscription_table.rs  m20230808_045411_create_task_table.rs  mod.rs
src/subscription/: create.rs  download.rs  filter.rs  job.rs  mod.rs  query.rs  tv.rs  update.rs
src/subscription/provider/: alist.rs  mod.rs  (+1 more)
src/task/: create.rs  delete.rs  mod.rs  param.rs  status.rs
src/test/: mod.rs
src/utils/: fs.rs  http.rs  mod.rs
(+27 files in other folders)
