[package]
name = "thunderfury"
version = "0.1.0"
edition = "2021"
publish = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 'z'   # Optimize for size

[dependencies]
actix-web = "4"
actix-web-static-files = "4.0"
static-files = "0.2.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0"

futures = "0.3"
tokio = { version = "1.0", features = ["full"] }

sea-orm = { version = "0.12", features = [
  "sqlx-sqlite",
  "runtime-tokio-rustls",
  "macros",
] }
sea-orm-migration = { version = "0.12", features = [
  "sqlx-sqlite",
  "runtime-tokio-rustls",
] }
chrono = "0.4"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "time",
  "local-time",
] }
tracing-appender = "0.2"
backtrace = "0.3"

clap = { version = "4.2", features = ["derive"] }
time = { version = "0.3" }
utoipa = { version = "3", features = ["actix_extras", "non_strict_integers"] }
utoipa-swagger-ui = { version = "3", features = ["actix-web", "debug-embed"] }

reqwest = { version = "0.11", features = [
  "rustls-tls",
  "json",
  "gzip",
  "deflate",
], default-features = false }
url = "2.4"
bytes = "1.4"
anyhow = "1.0"
thiserror = "1.0"
strum = { version = "0.24", features = ["derive"] }

rss = "2.0"
regex = "1"
lazy_static = "1.4"
lingua = { version = "1.5.0", default-features = false, features = [
  "english",
  "chinese",
  "japanese",
] }
unicode-segmentation = "1.10.1"

sha256 = "1.2"
uuid = { version = "1.4", features = ["v4", "fast-rng"] }
base64 = "0.13"
walkdir = "2"

[build-dependencies]
static-files = "0.2.1"
